# raytracer

./: CMakeLists.txt  Makefile
includes/: Canvas.hpp  Color.hpp  Environment.hpp  Matrix.hpp  Projectile.hpp  Tuple.hpp  raytracer.h
sources/: Canvas.cpp  Color.cpp  Matrix.cpp  Op_Tuple.cpp  Tuple.cpp  Utils.cpp  main.cpp
sources/utils/: canvasToPpm.cpp  equal.cpp  hadamardProduct.cpp  tick.cpp
tests/: Makefile  main.cpp  testCanvas.cpp  testColor.cpp  testMatrix.cpp  testTuple.cpp  tests  tuple.cpp
